# docs/swagger.json
@@ -146,12 +146,46 @@
                     }
                 }
             }
+        },
+        "/tache/{id}/deadline": {
+            "put": {
+                "summary": "Edit todoTask DeadLine",
+                "parameters": [
+                    {
+                        "description": "Label",
+                        "name": "Label",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.EditDeadLineTaskBody"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Task Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Task"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "model.Task": {
             "type": "object",
             "properties": {
+                "DeadLine": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -166,6 +200,9 @@
         "routes.AddTaskBody": {
             "type": "object",
             "properties": {
+                "deadline": {
+                    "type": "string"
+                },
                 "label": {
                     "type": "string"
                 }
@@ -176,6 +213,14 @@
             "properties": {
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "routes.EditDeadLineTaskBody": {
+            "type": "object",
+            "properties": {
+                "deadline": {
+                    "type": "string"
                 }
             }
         },
